removed programmingbitcoin and use petertodd.org/net

--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3de12921",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "788d40e6",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -30,17 +28,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f1e16592",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'verack\\x00\\x00\\x00\\x00\\x00\\x00'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -62,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b39969",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -76,21 +64,8 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b211b6bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -100,7 +75,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4150379c",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -114,16 +88,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "49645a6d",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".\n",
+      "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -138,7 +111,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48bef5bd",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -152,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ebed79c1",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +132,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -176,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f24a282",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -190,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e309596b",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +168,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -215,7 +184,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "040bfb6a",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +197,7 @@
    "source": [
     "# Handshake Example\n",
     "from network import SimpleNode, VersionMessage, VerAckMessage\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
+    "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "version = VersionMessage()\n",
     "node.send(version)\n",
     "print(node.wait_for(VerAckMessage).command)"
@@ -237,7 +205,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ae445e",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -251,7 +218,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4a70fa2",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +226,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.030s\n",
+      "Ran 1 test in 0.110s\n",
       "\n",
       "OK\n"
      ]
@@ -276,7 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ce657424",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +274,7 @@
     "# Block Header Download Example\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "from block import GENESIS_BLOCK_HASH\n",
-    "node = SimpleNode('mainnet.programmingbitcoin.com', testnet=False)\n",
+    "node = SimpleNode('seed.btc.petertodd.net', testnet=False)\n",
     "node.handshake()\n",
     "last_block_hash = GENESIS_BLOCK_HASH\n",
     "current_height = 1\n",
@@ -330,7 +295,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "639dc9d6",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -340,7 +304,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6cafc41",
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +337,8 @@
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
     "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "# connect to testnet.programmingbitcoin.com with testnet=True\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
+    "# connect to seed.tbtc.petertodd.org with testnet=True\n",
+    "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "# handshake\n",
     "node.handshake()\n",
     "# set the last block hash to the TESTNET_GENESIS_BLOCK_HASH\n",
@@ -410,7 +373,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2d69fedf",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +394,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beef0aff",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -446,7 +407,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bd8dcc99",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +434,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e18d81",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -488,7 +447,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "36fc3c8b",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +455,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -513,7 +471,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dcef614e",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +505,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6542197",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -565,7 +521,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2560030b",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +563,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebd6636",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -622,7 +576,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f0f78d2f",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +584,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -647,7 +600,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "02791302",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +635,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "583202ae",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -706,7 +657,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "69978d2f",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +698,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92cf26cf",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -762,7 +711,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ba315d27",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +719,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -787,7 +735,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "da0f5865",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +763,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c5ad49",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -845,7 +791,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5020c9b2",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +829,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a5fb86",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -898,7 +842,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f1aeb25c",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +850,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -922,7 +865,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1bd00d",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -936,7 +878,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "947bc273",
    "metadata": {},
    "outputs": [
     {
@@ -954,8 +895,8 @@
     "from block import Block\n",
     "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
     "block_hash = bytes.fromhex(block_hex)\n",
-    "# connect to testnet.programmingbitcoin.com on testnet\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
+    "# connect to seed.tbtc.petertodd.org on testnet\n",
+    "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "# handshake\n",
     "node.handshake()\n",
     "# create a GetDataMessage\n",
@@ -974,203 +915,6 @@
     "    raise RuntimeError('bad merkle root')\n",
     "# print the merkle root hex\n",
     "print(block_obj.merkle_root.hex())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "7e5bcafa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[None]\n",
-      "[None, None]\n",
-      "[None, None, None, None]\n",
-      "[None, None, None, None, None, None, None, None]\n",
-      "[None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Merkle Tree Example\n",
-    "from math import ceil, log\n",
-    "total = 16\n",
-    "max_depth = ceil(log(total, 2))\n",
-    "merkle_tree = []\n",
-    "for depth in range(max_depth + 1):\n",
-    "    num_items = ceil(total / 2**(max_depth - depth))\n",
-    "    level_hashes = [None] * num_items\n",
-    "    merkle_tree.append(level_hashes)\n",
-    "for level in merkle_tree:\n",
-    "    print(level)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "9230f665",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*597c4baf.*\n",
-      "6382df3f..., 87cf8fa3...\n",
-      "3ba6c080..., 8e894862..., 7ab01bb6..., 3df760ac...\n",
-      "272945ec..., 9a38d037..., 4a64abd9..., ec7c95e1..., 3b67006c..., 850683df..., d40d268b..., 8636b7a3...\n",
-      "9745f717..., 5573c8ed..., 82a02ecb..., 507ccae5..., a7a4aec2..., bb626766..., ea6d7ac1..., 45774386..., 76880292..., b1ae7f15..., 9b74f89f..., b3a92b5b..., b5c0b915..., c9d52c5c..., c555bc5f..., f9dbfafc...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Merkle Tree Populating and Navigating Example\n",
-    "from merkleblock import MerkleTree\n",
-    "hex_hashes = [\n",
-    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
-    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
-    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
-    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
-    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
-    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
-    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
-    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
-    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
-    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
-    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
-    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
-    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
-    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
-    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
-    "    \"f9dbfafc3af3400954975da24eb325e326960a25b87fffe23eef3e7ed2fb610e\",\n",
-    "]\n",
-    "tree = MerkleTree(len(hex_hashes))\n",
-    "tree.nodes[4] = [bytes.fromhex(h) for h in hex_hashes]\n",
-    "tree.nodes[3] = merkle_parent_level(tree.nodes[4])\n",
-    "tree.nodes[2] = merkle_parent_level(tree.nodes[3])\n",
-    "tree.nodes[1] = merkle_parent_level(tree.nodes[2])\n",
-    "tree.nodes[0] = merkle_parent_level(tree.nodes[1])\n",
-    "print(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "b853c92a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "597c4baf...\n",
-      "6382df3f..., 87cf8fa3...\n",
-      "3ba6c080..., 8e894862..., 7ab01bb6..., 3df760ac...\n",
-      "272945ec..., 9a38d037..., 4a64abd9..., ec7c95e1..., 3b67006c..., 850683df..., d40d268b..., 8636b7a3...\n",
-      "9745f717..., 5573c8ed..., 82a02ecb..., 507ccae5..., a7a4aec2..., bb626766..., ea6d7ac1..., 45774386..., 76880292..., b1ae7f15..., 9b74f89f..., b3a92b5b..., b5c0b915..., c9d52c5c..., c555bc5f..., f9dbfafc...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Merkle Tree Populating Example #2\n",
-    "from merkleblock import MerkleTree\n",
-    "hex_hashes = [\n",
-    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
-    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
-    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
-    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
-    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
-    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
-    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
-    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
-    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
-    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
-    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
-    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
-    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
-    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
-    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
-    "    \"f9dbfafc3af3400954975da24eb325e326960a25b87fffe23eef3e7ed2fb610e\",\n",
-    "]\n",
-    "tree = MerkleTree(len(hex_hashes))\n",
-    "tree.nodes[4] = [bytes.fromhex(h) for h in hex_hashes]\n",
-    "while tree.root() is None:\n",
-    "    if tree.is_leaf():\n",
-    "        tree.up()\n",
-    "    else:\n",
-    "        left_hash = tree.get_left_node()\n",
-    "        right_hash = tree.get_right_node()\n",
-    "        if left_hash is None:\n",
-    "            tree.left()\n",
-    "        elif right_hash is None:\n",
-    "            tree.right()\n",
-    "        else:\n",
-    "            tree.set_current_node(merkle_parent(left_hash, right_hash))\n",
-    "            tree.up()\n",
-    "print(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "9a558bf3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dc87b7e3...\n",
-      "6382df3f..., 6440941e...\n",
-      "3ba6c080..., 8e894862..., 7ab01bb6..., 996be980...\n",
-      "272945ec..., 9a38d037..., 4a64abd9..., ec7c95e1..., 3b67006c..., 850683df..., d40d268b..., f542a085...\n",
-      "9745f717..., 5573c8ed..., 82a02ecb..., 507ccae5..., a7a4aec2..., bb626766..., ea6d7ac1..., 45774386..., 76880292..., b1ae7f15..., 9b74f89f..., b3a92b5b..., b5c0b915..., c9d52c5c..., c555bc5f...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Merkle Tree Populating Example #3\n",
-    "from merkleblock import MerkleTree\n",
-    "hex_hashes = [\n",
-    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
-    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
-    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
-    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
-    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
-    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
-    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
-    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
-    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
-    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
-    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
-    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
-    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
-    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
-    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
-    "]\n",
-    "tree = MerkleTree(len(hex_hashes))\n",
-    "tree.nodes[4] = [bytes.fromhex(h) for h in hex_hashes]\n",
-    "while tree.root() is None:\n",
-    "    if tree.is_leaf():\n",
-    "        tree.up()\n",
-    "    else:\n",
-    "        left_hash = tree.get_left_node()\n",
-    "        if left_hash is None:\n",
-    "            tree.left()\n",
-    "        elif tree.right_exists():\n",
-    "            right_hash = tree.get_right_node()\n",
-    "            if right_hash is None:\n",
-    "                tree.right()\n",
-    "            else:\n",
-    "                tree.set_current_node(merkle_parent(left_hash, right_hash))\n",
-    "                tree.up()\n",
-    "        else:\n",
-    "            tree.set_current_node(merkle_parent(left_hash, left_hash))\n",
-    "            tree.up()\n",
-    "print(tree)"
    ]
   }
  ],
@@ -1194,5 +938,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
