--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -344,7 +344,7 @@
     "bf = BloomFilter(filter_size, filter_num_functions, filter_tweak)\n",
     "# add the h160 to the bloom filter\n",
     "bf.add(h160)\n",
-    "# connect to testnet.programmingbitcoin.com in testnet mode\n",
+    "# connect to seed.tbtc.petertodd.org in testnet mode\n",
     "node = SimpleNode('testnet-seed.bluematt.me', testnet=True)\n",
     "# complete the handshake\n",
     "node.handshake()\n",
@@ -474,7 +474,7 @@
     "target_script = p2pkh_script(target_h160)\n",
     "bloom_filter = BloomFilter(30, 5, 90210)\n",
     "fee = 5000  # fee in satoshis\n",
-    "# connect to testnet.programmingbitcoin.com in testnet mode\n",
+    "# connect to seed.tbtc.petertodd.org in testnet mode\n",
     "node = SimpleNode('testnet-seed.bitcoin.jonasschnelli.ch', testnet=True)\n",
     "# add the h160 to the bloom filter\n",
     "bloom_filter.add(h160)\n",
