--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3de12921",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "788d40e6",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2460c18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b39969",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -67,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b211b6bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4150379c",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -93,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49645a6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +98,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48bef5bd",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -119,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebed79c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +122,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f24a282",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -145,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e309596b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,13 +147,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "040bfb6a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Handshake Example\n",
     "from network import SimpleNode, VersionMessage, VerAckMessage\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
+    "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "version = VersionMessage()\n",
     "node.send(version)\n",
     "print(node.wait_for(VerAckMessage).command)"
@@ -172,7 +160,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ae445e",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -186,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a70fa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +185,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce657424",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Block Header Download Example\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "from block import GENESIS_BLOCK_HASH\n",
-    "node = SimpleNode('mainnet.programmingbitcoin.com', testnet=False)\n",
+    "node = SimpleNode('seed.btc.petertodd.net', testnet=False)\n",
     "node.handshake()\n",
     "last_block_hash = GENESIS_BLOCK_HASH\n",
     "current_height = 1\n",
@@ -227,7 +212,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "639dc9d6",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -237,7 +221,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2946c03f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +228,7 @@
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
     "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "# connect to testnet.programmingbitcoin.com with testnet=True\n",
+    "# connect to seed.tbtc.petertodd.org with testnet=True\n",
     "\n",
     "# handshake\n",
     "\n",
@@ -280,7 +263,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d69fedf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +276,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beef0aff",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -308,7 +289,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc035466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +307,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e18d81",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -341,7 +320,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36fc3c8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +332,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcef614e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +356,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6542197",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -396,7 +372,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6a7e654",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +403,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebd6636",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -442,7 +416,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f78d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +428,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02791302",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +455,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "583202ae",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -506,7 +477,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea715e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +509,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92cf26cf",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -553,7 +522,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba315d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +534,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da0f5865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +554,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c5ad49",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -616,7 +582,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5f58dc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +611,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a5fb86",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -660,7 +624,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1aeb25c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +635,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1bd00d",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -686,7 +648,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61bc779d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +657,7 @@
     "from block import Block\n",
     "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
     "block_hash = bytes.fromhex(block_hex)\n",
-    "# connect to testnet.programmingbitcoin.com on testnet\n",
+    "# connect to seed.tbtc.petertodd.org on testnet\n",
     "\n",
     "# handshake\n",
     "\n",
@@ -716,158 +677,27 @@
     "\n",
     "# print the merkle root hex\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e5bcafa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Merkle Tree Example\n",
-    "from math import ceil, log\n",
-    "total = 16\n",
-    "max_depth = ceil(log(total, 2))\n",
-    "merkle_tree = []\n",
-    "for depth in range(max_depth + 1):\n",
-    "    num_items = ceil(total / 2**(max_depth - depth))\n",
-    "    level_hashes = [None] * num_items\n",
-    "    merkle_tree.append(level_hashes)\n",
-    "for level in merkle_tree:\n",
-    "    print(level)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9230f665",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Merkle Tree Populating and Navigating Example\n",
-    "from merkleblock import MerkleTree\n",
-    "hex_hashes = [\n",
-    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
-    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
-    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
-    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
-    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
-    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
-    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
-    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
-    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
-    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
-    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
-    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
-    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
-    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
-    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
-    "    \"f9dbfafc3af3400954975da24eb325e326960a25b87fffe23eef3e7ed2fb610e\",\n",
-    "]\n",
-    "tree = MerkleTree(len(hex_hashes))\n",
-    "tree.nodes[4] = [bytes.fromhex(h) for h in hex_hashes]\n",
-    "tree.nodes[3] = merkle_parent_level(tree.nodes[4])\n",
-    "tree.nodes[2] = merkle_parent_level(tree.nodes[3])\n",
-    "tree.nodes[1] = merkle_parent_level(tree.nodes[2])\n",
-    "tree.nodes[0] = merkle_parent_level(tree.nodes[1])\n",
-    "print(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b853c92a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Merkle Tree Populating Example #2\n",
-    "from merkleblock import MerkleTree\n",
-    "hex_hashes = [\n",
-    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
-    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
-    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
-    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
-    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
-    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
-    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
-    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
-    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
-    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
-    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
-    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
-    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
-    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
-    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
-    "    \"f9dbfafc3af3400954975da24eb325e326960a25b87fffe23eef3e7ed2fb610e\",\n",
-    "]\n",
-    "tree = MerkleTree(len(hex_hashes))\n",
-    "tree.nodes[4] = [bytes.fromhex(h) for h in hex_hashes]\n",
-    "while tree.root() is None:\n",
-    "    if tree.is_leaf():\n",
-    "        tree.up()\n",
-    "    else:\n",
-    "        left_hash = tree.get_left_node()\n",
-    "        right_hash = tree.get_right_node()\n",
-    "        if left_hash is None:\n",
-    "            tree.left()\n",
-    "        elif right_hash is None:\n",
-    "            tree.right()\n",
-    "        else:\n",
-    "            tree.set_current_node(merkle_parent(left_hash, right_hash))\n",
-    "            tree.up()\n",
-    "print(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a558bf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Merkle Tree Populating Example #3\n",
-    "from merkleblock import MerkleTree\n",
-    "hex_hashes = [\n",
-    "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
-    "    \"5573c8ede34936c29cdfdfe743f7f5fdfbd4f54ba0705259e62f39917065cb9b\",\n",
-    "    \"82a02ecbb6623b4274dfcab82b336dc017a27136e08521091e443e62582e8f05\",\n",
-    "    \"507ccae5ed9b340363a0e6d765af148be9cb1c8766ccc922f83e4ae681658308\",\n",
-    "    \"a7a4aec28e7162e1e9ef33dfa30f0bc0526e6cf4b11a576f6c5de58593898330\",\n",
-    "    \"bb6267664bd833fd9fc82582853ab144fece26b7a8a5bf328f8a059445b59add\",\n",
-    "    \"ea6d7ac1ee77fbacee58fc717b990c4fcccf1b19af43103c090f601677fd8836\",\n",
-    "    \"457743861de496c429912558a106b810b0507975a49773228aa788df40730d41\",\n",
-    "    \"7688029288efc9e9a0011c960a6ed9e5466581abf3e3a6c26ee317461add619a\",\n",
-    "    \"b1ae7f15836cb2286cdd4e2c37bf9bb7da0a2846d06867a429f654b2e7f383c9\",\n",
-    "    \"9b74f89fa3f93e71ff2c241f32945d877281a6a50a6bf94adac002980aafe5ab\",\n",
-    "    \"b3a92b5b255019bdaf754875633c2de9fec2ab03e6b8ce669d07cb5b18804638\",\n",
-    "    \"b5c0b915312b9bdaedd2b86aa2d0f8feffc73a2d37668fd9010179261e25e263\",\n",
-    "    \"c9d52c5cb1e557b92c84c52e7c4bfbce859408bedffc8a5560fd6e35e10b8800\",\n",
-    "    \"c555bc5fc3bc096df0a0c9532f07640bfb76bfe4fc1ace214b8b228a1297a4c2\",\n",
-    "]\n",
-    "tree = MerkleTree(len(hex_hashes))\n",
-    "tree.nodes[4] = [bytes.fromhex(h) for h in hex_hashes]\n",
-    "while tree.root() is None:\n",
-    "    if tree.is_leaf():\n",
-    "        tree.up()\n",
-    "    else:\n",
-    "        left_hash = tree.get_left_node()\n",
-    "        if left_hash is None:\n",
-    "            tree.left()\n",
-    "        elif tree.right_exists():\n",
-    "            right_hash = tree.get_right_node()\n",
-    "            if right_hash is None:\n",
-    "                tree.right()\n",
-    "            else:\n",
-    "                tree.set_current_node(merkle_parent(left_hash, right_hash))\n",
-    "                tree.up()\n",
-    "        else:\n",
-    "            tree.set_current_node(merkle_parent(left_hash, left_hash))\n",
-    "            tree.up()\n",
-    "print(tree)"
-   ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
