--- a/session8/complete/session8.ipynb
+++ b/session8/complete/session8.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38e2d4da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "114053e0",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7f6940a5",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc1ed58a",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "71272776",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a620554",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -151,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eec31aac",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c23474e",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -207,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab4d865e",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +222,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "785dc758",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -245,7 +235,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b9844fce",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +258,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13dc9d85",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -284,7 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "42a800d0",
    "metadata": {},
    "outputs": [
     {
@@ -320,8 +307,8 @@
     "bf = BloomFilter(filter_size, filter_num_functions, filter_tweak)\n",
     "# add the h160 to the bloom filter\n",
     "bf.add(h160)\n",
-    "# connect to testnet.programmingbitcoin.com in testnet mode\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
+    "# connect to seed.tbtc.petertodd.org in testnet mode\n",
+    "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "# complete the handshake\n",
     "node.handshake()\n",
     "# send the filterload message\n",
@@ -353,7 +340,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da6b501f",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -367,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e6d62fe",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +376,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d14ded3b",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -407,7 +391,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f13ec51",
    "metadata": {},
    "outputs": [
     {
@@ -444,8 +427,8 @@
     "target_script = p2pkh_script(target_h160)\n",
     "bloom_filter = BloomFilter(30, 5, 90210)\n",
     "fee = 5000  # fee in satoshis\n",
-    "# connect to testnet.programmingbitcoin.com in testnet mode\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', testnet=True)\n",
+    "# connect to seed.tbtc.petertodd.org in testnet mode\n",
+    "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "# add the h160 to the bloom filter\n",
     "bloom_filter.add(h160)\n",
     "# complete the handshake\n",
