added difficulty adjustment to s7

--- a/TODO
+++ b/TODO
@@ -1,19 +1,9 @@
-change testnet seeds to
-
-
-    # testnet-seed.bitcoin.jonasschnelli.ch
-    # seed.tbtc.petertodd.org
-    # testnet-seed.bluematt.me
-    # testnet-seed.bitcoin.schildbach.de
-
-change mainnet seeds to the same
-
 Remove bloom filters and add neutrino
 
 Change exercises to use neutrino
 
-Add difficulty adjustment
-
 fix the segwit test in helper.py
 
 Change slides
+ - diff adjustment
+ - add diff adjustment to s7 header download
