--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -29,7 +29,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'verack\\x00\\x00\\x00\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -65,7 +73,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -94,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
+      ".\n",
       "----------------------------------------------------------------------\n",
       "Ran 1 test in 0.001s\n",
       "\n",
@@ -132,7 +152,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -226,7 +246,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.110s\n",
+      "Ran 1 test in 0.273s\n",
       "\n",
       "OK\n"
      ]
@@ -272,25 +292,32 @@
    ],
    "source": [
     "# Block Header Download Example\n",
+    "from block import GENESIS_BLOCK, MAX_TARGET\n",
+    "from helper import target_to_bits\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
-    "from block import GENESIS_BLOCK_HASH\n",
-    "node = SimpleNode('seed.btc.petertodd.net', testnet=False)\n",
+    "node = SimpleNode('seed.btc.petertodd.org', testnet=False)\n",
     "node.handshake()\n",
-    "last_block_hash = GENESIS_BLOCK_HASH\n",
+    "last_block = GENESIS_BLOCK\n",
+    "epoch_start_block = GENESIS_BLOCK\n",
     "current_height = 1\n",
     "for _ in range(20):\n",
-    "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
+    "    getheaders = GetHeadersMessage(start_block=last_block.hash())\n",
     "    node.send(getheaders)\n",
     "    headers = node.wait_for(HeadersMessage)\n",
-    "    for header in headers.headers:\n",
+    "    for header in headers:\n",
     "        if not header.check_pow():\n",
     "            raise RuntimeError(f'bad proof of work at block {count}')\n",
-    "        if last_block_hash != GENESIS_BLOCK_HASH and header.prev_block != last_block_hash:\n",
-    "            raise RuntimeError(f'discontinuous block at {count}')\n",
-    "        if current_height % 2016 == 0:\n",
-    "            print(header.id())\n",
-    "        current_height += 1\n",
-    "        last_block_hash = header.hash()"
+    "        if last_block != GENESIS_BLOCK:\n",
+    "            if header.prev_block != last_block.hash():\n",
+    "                raise RuntimeError(f'discontinuous block at {count}')\n",
+    "            if current_height % 2016 == 0:\n",
+    "                expected_bits = last_block.new_bits(epoch_start_block)\n",
+    "                if header.bits != expected_bits:\n",
+    "                    raise RuntimeError(f'bits are off {header.bits.hex()} vs {expected_bits.hex()}')\n",
+    "                epoch_start_block = header\n",
+    "                print(header.id())\n",
+    "        last_block = header\n",
+    "        current_height += 1"
    ]
   },
   {
@@ -336,38 +363,50 @@
     "# Exercise 7\n",
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
-    "from block import TESTNET_GENESIS_BLOCK_HASH\n",
+    "from block import TESTNET_GENESIS_BLOCK\n",
     "# connect to seed.tbtc.petertodd.org with testnet=True\n",
     "node = SimpleNode('seed.tbtc.petertodd.org', testnet=True)\n",
     "# handshake\n",
     "node.handshake()\n",
-    "# set the last block hash to the TESTNET_GENESIS_BLOCK_HASH\n",
-    "last_block_hash = TESTNET_GENESIS_BLOCK_HASH\n",
+    "# set the last block hash to the TESTNET_GENESIS_BLOCK\n",
+    "last_block = TESTNET_GENESIS_BLOCK\n",
+    "# set the first block of the epoch to the genesis block\n",
+    "epoch_start_block = TESTNET_GENESIS_BLOCK\n",
     "# set the current height to 1\n",
     "current_height = 1\n",
     "# loop until we we get 40,000 blocks\n",
     "while current_height < 40000:\n",
     "    # create a GetHeadersMessage starting from the last block we have\n",
-    "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
+    "    getheaders = GetHeadersMessage(start_block=last_block.hash())\n",
     "    # send the getheaders message\n",
     "    node.send(getheaders)\n",
     "    # wait for the HeadersMessage in response\n",
     "    headers = node.wait_for(HeadersMessage)\n",
     "    # loop through the headers from the headers message\n",
-    "    for header in headers.headers:\n",
+    "    for header in headers:\n",
     "        # check the proof of work\n",
     "        if not header.check_pow():\n",
     "            raise RuntimeError(f'bad proof of work at block {count}')\n",
-    "        # the prev_block of the current block should be the last block\n",
-    "        if last_block_hash != TESTNET_GENESIS_BLOCK_HASH and header.prev_block != last_block_hash:\n",
-    "            raise RuntimeError(f'discontinuous block at {count}')\n",
-    "        # print the id every 2016 blocks (difficulty adjustment)\n",
-    "        if current_height % 2016 == 0:\n",
-    "            print(header.id())\n",
+    "        # only check if the current hash isn't the first one\n",
+    "        if last_block != TESTNET_GENESIS_BLOCK:\n",
+    "            # the prev_block of the current block should be the last block\n",
+    "            if header.prev_block != last_block.hash():\n",
+    "                raise RuntimeError(f'discontinuous block at {count}')\n",
+    "            # when it's a multiple of 2016\n",
+    "            if current_height % 2016 == 0:\n",
+    "                # set the expected bits using the new_bits method using the last block\n",
+    "                expected_bits = last_block.new_bits(epoch_start_block)\n",
+    "                # check that the bits are what we expect\n",
+    "                if header.bits != expected_bits:\n",
+    "                    raise RuntimeError(f'bits are off {header.bits.hex()} vs {expected_bits.hex()}')\n",
+    "                # set the epoch start block to the current one\n",
+    "                epoch_start_block = header\n",
+    "                # print the current id\n",
+    "                print(header.id())\n",
     "        # increment the current_height\n",
     "        current_height += 1\n",
-    "        # set the last_block_hash to the current header's hash\n",
-    "        last_block_hash = header.hash()"
+    "        # set the last_block to the current header's hash\n",
+    "        last_block = header"
    ]
   },
   {
