--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -189,25 +189,32 @@
    "outputs": [],
    "source": [
     "# Block Header Download Example\n",
+    "from block import GENESIS_BLOCK, MAX_TARGET\n",
+    "from helper import target_to_bits\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
-    "from block import GENESIS_BLOCK_HASH\n",
-    "node = SimpleNode('seed.btc.petertodd.net', testnet=False)\n",
+    "node = SimpleNode('seed.btc.petertodd.org', testnet=False)\n",
     "node.handshake()\n",
-    "last_block_hash = GENESIS_BLOCK_HASH\n",
+    "last_block = GENESIS_BLOCK\n",
+    "epoch_start_block = GENESIS_BLOCK\n",
     "current_height = 1\n",
     "for _ in range(20):\n",
-    "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
+    "    getheaders = GetHeadersMessage(start_block=last_block.hash())\n",
     "    node.send(getheaders)\n",
     "    headers = node.wait_for(HeadersMessage)\n",
-    "    for header in headers.headers:\n",
+    "    for header in headers:\n",
     "        if not header.check_pow():\n",
     "            raise RuntimeError(f'bad proof of work at block {count}')\n",
-    "        if last_block_hash != GENESIS_BLOCK_HASH and header.prev_block != last_block_hash:\n",
-    "            raise RuntimeError(f'discontinuous block at {count}')\n",
-    "        if current_height % 2016 == 0:\n",
-    "            print(header.id())\n",
-    "        current_height += 1\n",
-    "        last_block_hash = header.hash()"
+    "        if last_block != GENESIS_BLOCK:\n",
+    "            if header.prev_block != last_block.hash():\n",
+    "                raise RuntimeError(f'discontinuous block at {count}')\n",
+    "            if current_height % 2016 == 0:\n",
+    "                expected_bits = last_block.new_bits(epoch_start_block)\n",
+    "                if header.bits != expected_bits:\n",
+    "                    raise RuntimeError(f'bits are off {header.bits.hex()} vs {expected_bits.hex()}')\n",
+    "                epoch_start_block = header\n",
+    "                print(header.id())\n",
+    "        last_block = header\n",
+    "        current_height += 1"
    ]
   },
   {
@@ -227,12 +234,14 @@
     "# Exercise 7\n",
     "\n",
     "from network import SimpleNode, GetHeadersMessage, HeadersMessage\n",
-    "from block import TESTNET_GENESIS_BLOCK_HASH\n",
+    "from block import TESTNET_GENESIS_BLOCK\n",
     "# connect to seed.tbtc.petertodd.org with testnet=True\n",
     "\n",
     "# handshake\n",
     "\n",
-    "# set the last block hash to the TESTNET_GENESIS_BLOCK_HASH\n",
+    "# set the last block hash to the TESTNET_GENESIS_BLOCK\n",
+    "\n",
+    "# set the first block of the epoch to the genesis block\n",
     "\n",
     "# set the current height to 1\n",
     "\n",
@@ -249,15 +258,25 @@
     "        # check the proof of work\n",
     "\n",
     "\n",
-    "        # the prev_block of the current block should be the last block\n",
+    "        # only check if the current hash isn't the first one\n",
+    "\n",
+    "            # the prev_block of the current block should be the last block\n",
     "\n",
     "\n",
-    "        # print the id every 2016 blocks (difficulty adjustment)\n",
+    "            # when it's a multiple of 2016\n",
+    "\n",
+    "                # set the expected bits using the new_bits method using the last block\n",
+    "\n",
+    "                # check that the bits are what we expect\n",
+    "\n",
+    "\n",
+    "                # set the epoch start block to the current one\n",
+    "\n",
     "\n",
     "\n",
     "        # increment the current_height\n",
     "\n",
-    "        # set the last_block_hash to the current header's hash\n"
+    "        # set the last_block to the current header's hash\n"
    ]
   },
   {
