--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e9525638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23707bbb",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -31,7 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "73b3da99",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +37,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -55,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bb124d",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -69,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f46cb7b8",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +91,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43f8214",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -110,7 +104,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f29ca15f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +112,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.012s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -134,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8a43ba",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -151,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d38462ec",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +169,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06721da1",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -191,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ccb1b654",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +206,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae3b51c",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -231,7 +219,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1c8d34d2",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +227,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -255,7 +242,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a8c6bf",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -269,7 +255,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "82398765",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +263,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.007s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -293,7 +278,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cadef762",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -307,7 +291,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3bb9500d",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +299,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -332,7 +315,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a679870",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +347,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b970467d",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -379,7 +360,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ebb9a829",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +368,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -403,7 +383,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e5c14d",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -417,7 +396,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "21f7d35f",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +404,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -441,7 +419,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79358b83",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -455,7 +432,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a217cc9f",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +440,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -479,7 +455,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22df955",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -493,7 +468,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ae86db16",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +476,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -517,7 +491,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43862774",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -531,7 +504,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aa4e31c6",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +512,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -556,7 +528,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4e61245a",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +551,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "991e86f2",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +575,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "793f2b14",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -630,7 +599,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "047d1e90",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +633,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94424c01",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -679,7 +646,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3dd05a9b",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +654,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -703,7 +669,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0124290b",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -718,7 +683,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fe8a79d8",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +717,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2468ed0",
    "metadata": {},
    "source": [
     "### Exercise 17\n",
@@ -767,7 +730,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "38557d88",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +738,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -787,6 +749,106 @@
     "\n",
     "reload(block)\n",
     "run(block.BlockTest('test_check_pow'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 18\n",
+    "\n",
+    "Calculate the new bits given the first and last blocks of this 2,016-block difficulty adjustment period:\n",
+    "\n",
+    "* Block 471744:\n",
+    "+\n",
+    "```\n",
+    "000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd88000000000000000000\n",
+    "10c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb84559\n",
+    "7e8b0118e43a81d3\n",
+    "```\n",
+    "\n",
+    "* Block 473759:\n",
+    "+\n",
+    "```\n",
+    "02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000\n",
+    "b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e126425859\n",
+    "7e8b0118e5f00474\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80df6217\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 18\n",
+    "\n",
+    "from io import BytesIO\n",
+    "from block import Block, TWO_WEEKS\n",
+    "from helper import target_to_bits\n",
+    "block1_hex = '000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd8800000000000000000010c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb845597e8b0118e43a81d3'\n",
+    "block2_hex = '02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e1264258597e8b0118e5f00474'\n",
+    "last_block = Block.parse(BytesIO(bytes.fromhex(block1_hex)))\n",
+    "first_block = Block.parse(BytesIO(bytes.fromhex(block2_hex)))\n",
+    "# calculate the differential in time between the two blocks\n",
+    "time_differential = last_block.timestamp - first_block.timestamp\n",
+    "# max differential is 4 * TWO_WEEKS\n",
+    "if time_differential > TWO_WEEKS * 4:\n",
+    "    time_differential = TWO_WEEKS * 4\n",
+    "# min differential is TWO_WEEKS // 4\n",
+    "if time_differential < TWO_WEEKS // 4:\n",
+    "    time_differential = TWO_WEEKS // 4\n",
+    "# formula for new target is target * time differential // TWO_WEEKS\n",
+    "new_target = last_block.target() * time_differential // TWO_WEEKS\n",
+    "# convert the target to bits\n",
+    "new_bits = target_to_bits(new_target)\n",
+    "# print the new bits in hex\n",
+    "print(new_bits.hex())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 19\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session6/block.py) pass: `block.py:BlockTest:test_new_bits`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 19\n",
+    "\n",
+    "reload(block)\n",
+    "run(block.BlockTest('test_new_bits'))"
    ]
   }
  ],
@@ -810,5 +872,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
