--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9525638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23707bbb",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -31,7 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b3da99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bb124d",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -57,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41204f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +70,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43f8214",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -89,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f29ca15f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +94,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8a43ba",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -118,7 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fade740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06721da1",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -149,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e380e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +155,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae3b51c",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -180,7 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c8d34d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +179,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a8c6bf",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -206,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82398765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +203,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cadef762",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -232,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb9500d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +228,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a679870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +248,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b970467d",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -280,7 +261,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb9a829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +272,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e5c14d",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -306,7 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21f7d35f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +296,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79358b83",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -332,7 +309,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a217cc9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +320,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22df955",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -358,7 +333,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae86db16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +344,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43862774",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -384,7 +357,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa4e31c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +369,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e61245a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +384,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "991e86f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +400,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "793f2b14",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -455,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851032f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +448,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94424c01",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -494,7 +461,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dd05a9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +472,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0124290b",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -521,7 +486,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc50a4fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +511,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2468ed0",
    "metadata": {},
    "source": [
     "### Exercise 17\n",
@@ -561,7 +524,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38557d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,27 +532,89 @@
     "reload(block)\n",
     "run(block.BlockTest('test_check_pow'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 18\n",
+    "\n",
+    "Calculate the new bits given the first and last blocks of this 2,016-block difficulty adjustment period:\n",
+    "\n",
+    "* Block 471744:\n",
+    "+\n",
+    "```\n",
+    "000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd88000000000000000000\n",
+    "10c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb84559\n",
+    "7e8b0118e43a81d3\n",
+    "```\n",
+    "\n",
+    "* Block 473759:\n",
+    "+\n",
+    "```\n",
+    "02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000\n",
+    "b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e126425859\n",
+    "7e8b0118e5f00474\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 18\n",
+    "\n",
+    "from io import BytesIO\n",
+    "from block import Block, TWO_WEEKS\n",
+    "from helper import target_to_bits\n",
+    "block1_hex = '000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd8800000000000000000010c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb845597e8b0118e43a81d3'\n",
+    "block2_hex = '02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e1264258597e8b0118e5f00474'\n",
+    "last_block = Block.parse(BytesIO(bytes.fromhex(block1_hex)))\n",
+    "first_block = Block.parse(BytesIO(bytes.fromhex(block2_hex)))\n",
+    "# calculate the differential in time between the two blocks\n",
+    "\n",
+    "# max differential is 4 * TWO_WEEKS\n",
+    "\n",
+    "\n",
+    "# min differential is TWO_WEEKS // 4\n",
+    "\n",
+    "\n",
+    "# formula for new target is target * time differential // TWO_WEEKS\n",
+    "\n",
+    "# convert the target to bits\n",
+    "new_bits = target_to_bits(new_target)\n",
+    "# print the new bits in hex\n",
+    "print(new_bits.hex())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 19\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session6/block.py) pass: `block.py:BlockTest:test_new_bits`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 19\n",
+    "\n",
+    "reload(block)\n",
+    "run(block.BlockTest('test_new_bits'))"
+   ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
